@@ -7,12 +7,19 @@ import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 import it.gov.pagopa.common.web.exception.ClientException;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.codec.multipart.FilePart;
 import it.gov.pagopa.common.web.exception.ClientExceptionNoBody;
+import it.gov.pagopa.common.web.exception.ClientExceptionWithBody;
 import it.gov.pagopa.idpay.transactions.connector.rest.UserRestClient;
 import it.gov.pagopa.idpay.transactions.connector.rest.dto.FiscalCodeInfoPDV;
 import it.gov.pagopa.idpay.transactions.dto.DownloadInvoiceResponseDTO;
 import it.gov.pagopa.idpay.transactions.dto.InvoiceData;
 import it.gov.pagopa.idpay.transactions.dto.TrxFiltersDTO;
+import it.gov.pagopa.idpay.transactions.enums.OrganizationRole;
 import it.gov.pagopa.idpay.transactions.model.RewardTransaction;
 import it.gov.pagopa.idpay.transactions.repository.RewardTransactionRepository;
 import it.gov.pagopa.idpay.transactions.storage.InvoiceStorageClient;
@@ -23,8 +30,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -32,6 +37,10 @@ import org.springframework.http.HttpStatus;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 @MockitoSettings(strictness = Strictness.LENIENT)
 @ExtendWith(MockitoExtension.class)
@@ -57,6 +66,10 @@ class PointOfSaleTransactionServiceImplTest {
     private static final String USER_ID = "USERID1";
     private static final String STATUS = "REWARDED";
     private static final String TRX_ID = "TRX_ID";
+    private static final String DOC_NUMBER = "DOC123";
+    private static final String NEW_DOC_NUMBER = "new_DOC123";
+    private static final String OLD_FILENAME = "old_invoice.pdf";
+    private static final String NEW_FILENAME = "new_invoice.pdf";
 
     @BeforeEach
     void setUp() {
@@ -95,7 +108,7 @@ class PointOfSaleTransactionServiceImplTest {
                 .assertNext(page -> {
                     assertEquals(1, page.getTotalElements());
                     assertEquals(1, page.getContent().size());
-                    assertEquals(trx.getIdTrxAcquirer(), page.getContent().getFirst().getIdTrxAcquirer());
+                    assertEquals(trx.getIdTrxAcquirer(), page.getContent().get(0).getIdTrxAcquirer());
                 })
                 .verifyComplete();
 
@@ -142,7 +155,7 @@ class PointOfSaleTransactionServiceImplTest {
                 .assertNext(page -> {
                     assertEquals(1, page.getTotalElements());
                     assertEquals(1, page.getContent().size());
-                    assertEquals(trx.getIdTrxAcquirer(), page.getContent().getFirst().getIdTrxAcquirer());
+                    assertEquals(trx.getIdTrxAcquirer(), page.getContent().get(0).getIdTrxAcquirer());
                 })
                 .verifyComplete();
 
@@ -173,7 +186,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn(Mono.just(trx));
 
         StepVerifier.create(
-                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                                TRX_ID))
                 .expectErrorMatches(throwable ->
                         throwable instanceof ClientExceptionNoBody
                                 && ((ClientExceptionNoBody) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST
@@ -195,7 +209,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn(Mono.just(trx));
 
         StepVerifier.create(
-                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                                TRX_ID))
                 .expectErrorMatches(throwable ->
                         throwable instanceof ClientExceptionNoBody
                                 && ((ClientExceptionNoBody) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST
@@ -217,7 +232,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn(Mono.just(trx));
 
         StepVerifier.create(
-                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                        pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                                TRX_ID))
                 .expectErrorMatches(throwable ->
                         throwable instanceof ClientExceptionNoBody
                                 && ((ClientExceptionNoBody) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST
@@ -243,7 +259,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn("tokenUrl");
 
         Mono<DownloadInvoiceResponseDTO> result =
-                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                        TRX_ID);
 
         StepVerifier.create(result)
                 .assertNext(dto -> assertEquals("tokenUrl", dto.getInvoiceUrl()))
@@ -268,7 +285,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn("tokenUrl");
 
         Mono<DownloadInvoiceResponseDTO> result =
-                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                        TRX_ID);
 
         StepVerifier.create(result)
                 .assertNext(dto -> assertEquals("tokenUrl", dto.getInvoiceUrl()))
@@ -293,7 +311,8 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn("tokenUrl");
 
         Mono<DownloadInvoiceResponseDTO> result =
-                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                        TRX_ID);
 
         StepVerifier.create(result)
                 .assertNext(dto -> assertEquals("tokenUrl", dto.getInvoiceUrl()))
@@ -309,12 +328,14 @@ class PointOfSaleTransactionServiceImplTest {
                 .thenReturn(Mono.empty());
 
         Mono<DownloadInvoiceResponseDTO> result =
-                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+                pointOfSaleTransactionService.downloadTransactionInvoice(MERCHANT_ID, POINT_OF_SALE_ID,
+                        TRX_ID);
 
         StepVerifier.create(result)
                 .expectErrorMatches(throwable ->
                         throwable instanceof ClientExceptionNoBody
-                                && ((ClientExceptionNoBody) throwable).getHttpStatus().equals(HttpStatus.BAD_REQUEST)
+                                && ((ClientExceptionNoBody) throwable).getHttpStatus()
+                                .equals(HttpStatus.BAD_REQUEST)
                                 && TRANSACTION_MISSING_INVOICE.equals(throwable.getMessage()))
                 .verify();
 
@@ -350,5 +371,179 @@ class PointOfSaleTransactionServiceImplTest {
 
         verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, "AAAA");
         verify(invoiceStorageClient).getFileSignedUrl(anyString());
+    }
+
+    @Test
+    void updateInvoiceTransaction_success() throws IOException {
+        Path tempPath = Files.createTempFile("new_invoice", ".pdf");
+        Files.write(tempPath, "test content".getBytes());
+
+        FilePart filePart = createMockFilePart(tempPath.getFileName().toString(),
+                MediaType.APPLICATION_PDF_VALUE);
+        RewardTransaction trx = RewardTransaction.builder()
+                .id(TRX_ID)
+                .merchantId(MERCHANT_ID)
+                .pointOfSaleId(POINT_OF_SALE_ID)
+                .status("INVOICED")
+                .invoiceData(InvoiceData.builder().filename(OLD_FILENAME).docNumber("OLD_DOC").build())
+                .build();
+
+        when(rewardTransactionRepository.findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                .thenReturn(Mono.just(trx));
+        when(filePart.transferTo(any(Path.class))).thenAnswer(invocation -> {
+            Path target = invocation.getArgument(0);
+            Files.copy(tempPath, target, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+            return Mono.empty();
+        });
+        when(invoiceStorageClient.deleteFile(anyString())).thenReturn(null);
+        when(invoiceStorageClient.upload(any(), anyString(), anyString())).thenReturn(null);
+        when(rewardTransactionRepository.save(any(RewardTransaction.class))).thenReturn(Mono.just(trx));
+
+        Mono<Void> result = pointOfSaleTransactionService.updateInvoiceTransaction(
+                TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER);
+
+        StepVerifier.create(result)
+                .verifyComplete();
+
+        verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+        verify(invoiceStorageClient).deleteFile(
+                "invoices/merchant/MERCHANTID1/pos/POINTOFSALEID1/transaction/TRX_ID/invoice/old_invoice.pdf");
+        verify(invoiceStorageClient).upload(any(), eq(
+                        "invoices/merchant/MERCHANTID1/pos/POINTOFSALEID1/transaction/TRX_ID/invoice/"
+                                + tempPath.getFileName().toString()),
+                eq(MediaType.APPLICATION_PDF_VALUE));
+        verify(rewardTransactionRepository).save(any(RewardTransaction.class));
+
+        Files.deleteIfExists(tempPath);
+    }
+
+    @Test
+    void updateInvoiceTransaction_transactionNotFound() {
+        FilePart filePart = createMockFilePart(NEW_FILENAME, MediaType.APPLICATION_PDF_VALUE);
+
+        when(rewardTransactionRepository.findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                .thenReturn(Mono.empty());
+
+        Mono<Void> result = pointOfSaleTransactionService.updateInvoiceTransaction(
+                TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER);
+
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable -> throwable instanceof ClientExceptionNoBody &&
+                        ((ClientExceptionNoBody) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST &&
+                        throwable.getMessage().equals(TRANSACTION_MISSING_INVOICE))
+                .verify();
+
+        verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+        verifyNoInteractions(invoiceStorageClient);
+    }
+
+    @Test
+    void updateInvoiceTransaction_statusNotInvoiced() {
+        FilePart filePart = createMockFilePart(NEW_FILENAME, MediaType.APPLICATION_PDF_VALUE);
+        RewardTransaction trx = RewardTransaction.builder()
+                .id(TRX_ID)
+                .merchantId(MERCHANT_ID)
+                .pointOfSaleId(POINT_OF_SALE_ID)
+                .status("REWARDED")
+                .invoiceData(InvoiceData.builder().filename(OLD_FILENAME).build())
+                .build();
+
+        when(rewardTransactionRepository.findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                .thenReturn(Mono.just(trx));
+
+        Mono<Void> result = pointOfSaleTransactionService.updateInvoiceTransaction(
+                TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER);
+
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable -> throwable instanceof ClientExceptionNoBody &&
+                        ((ClientExceptionNoBody) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST &&
+                        throwable.getMessage().equals(TRANSACTION_MISSING_INVOICE))
+                .verify();
+
+        verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+        verifyNoInteractions(invoiceStorageClient);
+    }
+
+    @Test
+    void updateInvoiceTransaction_merchantIdMismatch() {
+        FilePart filePart = createMockFilePart(NEW_FILENAME, MediaType.APPLICATION_PDF_VALUE);
+        RewardTransaction trx = RewardTransaction.builder()
+                .id(TRX_ID)
+                .merchantId("DIFFERENT_MERCHANT")
+                .pointOfSaleId(POINT_OF_SALE_ID)
+                .status("INVOICED")
+                .invoiceData(InvoiceData.builder().filename(OLD_FILENAME).build())
+                .build();
+
+        when(rewardTransactionRepository.findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                .thenReturn(Mono.just(trx));
+
+        Mono<Void> result = pointOfSaleTransactionService.updateInvoiceTransaction(
+                TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER);
+
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable -> throwable instanceof ClientException &&
+                        ((ClientException) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST)
+                .verify();
+
+        verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+        verifyNoInteractions(invoiceStorageClient);
+    }
+
+    @Test
+    void updateInvoiceTransaction_pointOfSaleIdMismatch() {
+        FilePart filePart = createMockFilePart(NEW_FILENAME, MediaType.APPLICATION_PDF_VALUE);
+        RewardTransaction trx = RewardTransaction.builder()
+                .id(TRX_ID)
+                .merchantId(MERCHANT_ID)
+                .pointOfSaleId("DIFFERENT_POS")
+                .status("INVOICED")
+                .invoiceData(InvoiceData.builder().filename(OLD_FILENAME).build())
+                .build();
+
+        when(rewardTransactionRepository.findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID))
+                .thenReturn(Mono.just(trx));
+
+        Mono<Void> result = pointOfSaleTransactionService.updateInvoiceTransaction(
+                TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER);
+
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable -> throwable instanceof ClientException &&
+                        ((ClientException) throwable).getHttpStatus() == HttpStatus.BAD_REQUEST)
+                .verify();
+
+        verify(rewardTransactionRepository).findTransaction(MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+        verifyNoInteractions(invoiceStorageClient);
+    }
+
+    @Test
+    void updateInvoiceTransaction_invalidFileFormat() {
+        FilePart filePart = createMockFilePart("invalid.txt", "text/plain");
+
+        ClientExceptionWithBody ex = assertThrows(ClientExceptionWithBody.class,
+                () -> pointOfSaleTransactionService.updateInvoiceTransaction(
+                        TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, filePart, NEW_DOC_NUMBER));
+
+        assertEquals("File must be a PDF or XML", ex.getCause().getMessage());
+    }
+
+    @Test
+    void updateInvoiceTransaction_nullFile() {
+        ClientExceptionWithBody ex = assertThrows(ClientExceptionWithBody.class,
+                () -> pointOfSaleTransactionService.updateInvoiceTransaction(
+                        TRX_ID, MERCHANT_ID, POINT_OF_SALE_ID, null, DOC_NUMBER));
+
+        assertEquals("File is required", ex.getCause().getMessage());
+    }
+
+    private FilePart createMockFilePart(String filename, String contentType) {
+        FilePart filePart = mock(FilePart.class);
+        HttpHeaders headers = new HttpHeaders();
+        if (contentType != null) {
+            headers.setContentType(MediaType.parseMediaType(contentType));
+        }
+        when(filePart.filename()).thenReturn(filename);
+        when(filePart.headers()).thenReturn(headers);
+        return filePart;
     }
 }
